@@ -1,3 +1,7 @@
+2006-04-19  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/constants.py:  Start CLEARPART_ constants at 0.
+
 2006-04-13  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/data.py (KickstartRepoData):  Added.
